# sawfish

./: .gitignore  CHANGELOG.md  CITATION.bib  CITATION.cff  Cargo.toml  LICENSE-THIRDPARTY.json  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
PacificBiosciences/sawfish/: README.md
PacificBiosciences/sawfish/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
PacificBiosciences/sawfish/ghrs-data/snapshots/: 2024-12-18_062240_top_referrers_snapshot.csv  2024-12-18_062240_views_clones_series_fragment.csv  2024-12-18_230508_top_paths_snapshot.csv  2024-12-18_230508_views_clones_series_fragment.csv  2024-12-19_230505_top_paths_snapshot.csv  (+79 more)
PacificBiosciences/sawfish/latest-report/: report.html  report.md  report_for_pdf.html
data/: README.md
data/cnv_excluded_regions/: README.md  annotation_and_common_cnv.hg38.bed.gz.tbi  cnv.excluded_regions_inc_sawfish_common_cnv.hg38.bed.gz.tbi
data/expected_cn/: README.md  expected_cn.chm13.XX.bed  expected_cn.chm13.XY.bed
docs/: README.md  accuracy.md  developer_note.md  user_guide.md
docs/methods/: README.md  methods.md
lib/rust-vc-utils/: CHANGELOG.md  Cargo.toml  LICENSE-THIRDPARTY.json
lib/rust-vc-utils/src/: genome_ref.rs  genome_segment.rs  indel_breakend_homology.rs  int_range.rs  lib.rs  progress_reporter.rs  region_map.rs  seq_util.rs  util.rs
lib/rust-vc-utils/src/bam_utils/: aux.rs  bam_reader_utils.rs  bam_record_utils.rs  basemod.rs  cigar.rs  mod.rs  read_to_ref_map.rs  split_read.rs  util.rs
lib/rust-vc-utils/src/bam_utils/aux/: mod.rs  sa_tag_parser.rs
lib/rust-vc-utils/src/bam_utils/cigar/: clip_alignment.rs  mod.rs  score_alignment.rs
lib/rust-vc-utils/src/bam_utils/cigar/shift_indels/: cigar_indel_shifter.rs  left_shift_indels.rs  mod.rs  right_shift_indels.rs
scripts/: README.md
scripts/cnv_excluded_regions/: README.md  convert_hg19_regions_to_hs37d5.bash  excluded_region_tools.yaml  get_cnv_exclusion_regions.bash
scripts/cnv_excluded_regions/annotation/: convert_hg19_regions_to_hs37d5.bash  get_excluded_regions_from_ref_annotation.bash
scripts/cnv_excluded_regions/common_cnv/: convert_sawfish_vcfs_to_common_cnv_exclusion_bed.bash
scripts/debug/: find_avx2.bash
scripts/debug/docker_run/: Dockerfile  README.md
scripts/truvari_utils/: README.md  process_truvari_ga4gh_vcfs.py
src/: bam_sa_parser.rs  bam_scanner.rs  bam_utils.rs  bcf_utils.rs  bio_align_utils.rs  breakpoint.rs  cnv_output.rs  contig_output.rs  copy_number_segmentation.rs  depth_bins.rs  discover.rs  expected_ploidy.rs  filenames.rs  gc_correction.rs  genome_ref_utils.rs  genome_regions.rs  genome_segment.rs  genome_segment_utils.rs  int_range.rs  large_variant_output.rs  log_utils.rs  logger.rs  maf_utils.rs  main.rs  os_utils.rs  prob_utils.rs  refined_cnv.rs  run_data.rs  run_stats.rs  simple_alignment.rs  spoa_utils.rs  sv_group.rs  sv_id.rs  sv_scoring_exclusion.rs  utils.rs  vcf_utils.rs  version.rs  wfa2_utils.rs  worker_thread_data.rs
src/cli/: discover.rs  joint_call.rs  mod.rs  shared.rs  utils.rs
src/cluster_breakpoints/: break_builder.rs  large_insertions.rs  mod.rs  process_breakpoint_clusters.rs
src/copy_number_segmentation/: copy_number_boundary_sync.rs  mod.rs
src/joint_call/: annotate_inversions.rs  find_inversions.rs  get_refined_svs.rs  joint_call_all_samples.rs  mod.rs  read_sample_data.rs  sample_output.rs  supporting_read_names.rs  write_copy_number_info.rs  write_merged_contigs.rs
src/joint_call/merge_cnv/: mod.rs  transition_types.rs
src/joint_call/merge_haplotypes/: merge_sv_shared.rs  mod.rs  multi_region.rs  single_region.rs
src/refine_sv/: assembly_regions.rs  debug_output.rs  filter_dups.rs  mod.rs  trimmed_reads.rs
src/refine_sv/align/: mod.rs  segment_alignment.rs  util.rs
src/refine_sv/assemble/: add_flanks.rs  banded_pairwise_assembler.rs  mod.rs  spoa_assembler.rs
src/score_sv/: assess_depth.rs  mod.rs
test_data/: README.md  header_only.bam  no_index.bam  test_reference.fa
(+5 files in other folders)
