[package]
name = "sawfish"
version = "2.0.3"
authors = ["Chris Saunders <csaunders@pacificbiosciences.com>"]
description = "Structural variant and copy number analysis for mapped PacBio HiFi reads"
edition = "2024"
license-file="LICENSE.md"

[profile.release]
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true

[build-dependencies]
vergen-gitcl = "1"

[dependencies]
approx = "0.5"
bio = "2"
camino = { version = "1", features = ["serde1"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "suggestions"] }
const_format = "0.2"
exitcode = "1"
fern = "0.7"
flate2 = "1"
hhmmss = "0.1"
itertools = "0.14"
libc = "0.2"
log = "0.4"
num = "0.4"
num_cpus = "1"
rayon = "1"
regex = "1"
rlimit = "0"
rust-htslib = { version = "0.50", default-features = false, features = ["bzip2", "lzma"] }
rust-vc-utils = { path="lib/rust-vc-utils" }
rust-wfa2 = { git = "https://github.com/ctsa/rust-wfa2.git" }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-error = "0.3"
spoa = { tag = "sawfish_v1", git = "https://github.com/ctsa/spoa-rs.git" }
statrs = "0.18"
strum = { version = "0.27", features = ["derive"] }
thousands = "0.2"
unwrap = "1"
